implemented all handlers for USERS, config also and working on main.go in USERS
